--- a/recruitment_app_frontend_sebastian_lachowicz/app/index.html
+++ b/recruitment_app_frontend_sebastian_lachowicz/app/index.html
@@ -143,7 +143,7 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-4">
-          <article>
+          <article class="">
             I'm specifier
           </article>
 
