--- a/recruitment_app_frontend_sebastian_lachowicz/app/index.html
+++ b/recruitment_app_frontend_sebastian_lachowicz/app/index.html
@@ -18,10 +18,10 @@
   </head>
   <body>
   <div class="container-fluid">
-    <div class="container">
+    <div class="container-md">
       <div class=" navbar-primary">
         <div class="logo">
-          <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
+          <a class="navbar-brand" href="#">Droptica</a>
         </div>
         <div class="navbar-box call-box">
           <a href="tel:+48882515514">Call <span>+48 882 515 514</span></a>
@@ -39,7 +39,7 @@
 <!-- -----------------  MAIN NAVIGATION BAR ---------------------------- -->
     <nav class="navbar navbar-secondary  navbar-expand-lg">
 
-<div class="container">
+<div class="container-md">
     <nav class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -115,7 +115,7 @@
       </div>
 
       <div class="banner-content">
-        <div class="container">
+        <div class="container-md">
           <div class="row">
             <div class="col-12 col-md-6">
               <h1>Dunlavin Church restoration </h1>
@@ -131,7 +131,7 @@
 
 
   <!-- ------------------------CONTENT --------------------------------- -->
-    <div class="container text-center main-content">
+    <div class="container-md text-center main-content">
       <div class="row">
         <div class="col-12 ">
           <section class="content-title">
@@ -141,22 +141,22 @@
 
         </div>
       </div>
-      <div class="row">
-        <div class="col-12 col-md-4">
+      <div class="row column-wrapper">
+        <div class="col-12 col-md-4 column">
           <article class="">
-            I'm specifier
+           <a href="#">I'm specifier</a>
           </article>
 
         </div>
-        <div class="col-12 col-md-4">
-          <article>
-            I'm builder
+        <div class="col-12 col-md-4 column">
+          <article class="">
+            <a href="#">I'm builder</a>
           </article>
 
         </div>
-        <div class="col-12 col-md-4">
-          <article>
-            I'm precast manufacturer
+        <div class="col-12 col-md-4 column">
+          <article class="">
+            <a href="#">I'm precast manufacturer</a>
           </article>
 
         </div>
